--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -13,7 +13,7 @@
     }
 }
 
-@import url("https://fonts.googleapis.com/css2?family=Rubik:ital,wght@0,300;0,400;1,300&display=swap");
+@import url('https://fonts.googleapis.com/css2?family=JetBrains+Mono:wght@300;400&family=Rubik:ital,wght@0,300;0,400;1,300&display=swap');
 
 body {
     max-height: 100%;
@@ -29,7 +29,7 @@ body {
 }
 
 h1 {
-    font-family: "Rubik", sans-serif;
+    font-family: "Rubik", monospace;
 }
 
 p {
