--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -22,8 +22,19 @@ body {
     padding: 2em;
     font-family: "Rubik", sans-serif;
     color: #e6e6e6;
+
+    animation: fadein 1.5s;
 }
 
+@keyframes fadein {
+    from {
+        opacity: 0;
+    }
+
+    to {
+        opacity: 1;
+    }
+}
 ::selection {
     background: var(--selection-colour);
 }
