--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -43,6 +43,18 @@ h1 {
     font-family: "Rubik", monospace;
 }
 
+h2 {
+    font-family: "Rubik", monospace;
+    font-size: 2em;
+    padding: 0.5em 0;
+}
+
+h3 {
+    font-family: "Rubik", monospace;
+    font-size: 1.5em;
+    padding: 0.5em 0;
+}
+
 p {
     font-size: 18px;
 }
@@ -62,10 +74,6 @@ a:active {
     color: var(--link-colour-active);
 }
 
-li {
-    list-style-type: none;
-}
-
 button {
     padding: 9px 25px;
     background-color: rgba(87, 87, 87, 0.103);
@@ -78,3 +86,21 @@ button {
 button:hover {
     background-color: rgb(87, 87, 87);
 }
+
+/* code blocks */
+
+pre {
+    background: #313131;
+    border-radius: 10px;
+    padding: 1em;
+    margin: 1em 0;
+    font-family: "Rubik", monospace;
+    font-size: 15px;
+    color: #e6e6e6;
+}
+
+ul {
+    list-style: disc;
+    padding-left: 1.5em;
+}
+
